--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^10.1.2",
     "@nestjs/mercurius": "^10.1.2",
     "@nestjs/platform-fastify": "^9.1.1",
+    "@prisma/client": "^4.5.0",
     "fastify": "^4.6.0",
     "graphql": "^16.6.0",
     "mercurius": "^11.0.0",
+    "prisma": "^4.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
